--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 .image {
-border: 2px solid white;
+border: 4px solid white;
 border-radius: 100px;
 width: "150";
 height: 200px;
@@ -60,4 +60,18 @@ margin-left: 90px;
 padding-right: 10%;
 place-content: center;
 
+}
+
+.ed {
+   margin-top:40px;
+   margin-bottom: 40px 
+}
+
+.exp {
+   margin-top:40px;
+   margin-bottom: 20px 
+}
+.foot {
+   margin-top:40px;
+   margin-bottom: 40px 
 }
