--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap');
 .section1 {
    display: flex;
-   align-items: center;
-   justify-content: center;
+   flex-direction: row;
+   justify-content: flex-start;
    background-color: tomato;
    color: white;
    margin-bottom: 0%; 
+   width: 2500px;
 }
 
 .image {
@@ -14,12 +15,21 @@ border: 4px solid white;
 border-radius: 100px;
 width: "150";
 height: 200px;
+position: absolute;
+margin-bottom: 220px;
 
 }
 .image-text {
    font-weight: 600;
    font-size: xx-large;
    text-align: center;
+   margin-left: 800px;
+}
+.sub-text {
+   font-weight: 500;
+   font-size: medium;
+   text-align: center;
+   margin-left: 800px;
 }
 
 .menu {
@@ -56,8 +66,6 @@ height: 200px;
 }
 
 .section-ed {
-margin-left: 90px;
-padding-right: 10%;
 place-content: center;
 
 }
@@ -72,6 +80,16 @@ place-content: center;
    margin-bottom: 20px 
 }
 .foot {
-   margin-top:40px;
-   margin-bottom: 40px 
+   position: absolute;
+
+}
+
+.container-info {
+   display: flex;
+   flex-direction: row;
+}
+.container-exp {
+   display: flex;
+   flex-direction: row;
+   margin-top: 150px;
 }
